# m-cpuminer-v2

./: Makefile.am  configure.ac  cpu-miner.c  miner.h  sha256-armv8-aarch32.S  sha256-armv8-aarch64.S  sha512-armv8-aarch64-asm.S
compat/: Makefile.in
compat/jansson/: Makefile.in
m7/: Makefile.in  sha2.c  sha2big.c  sph_sha2.h
